fix(operator): always generate full set of condition metrics for each LokiStack (#19509)
Co-authored-by: Robert Jacob <rojacob@redhat.com>

--- a/operator/internal/manifests/internal/alerts/prometheus-alerts.yaml
+++ b/operator/internal/manifests/internal/alerts/prometheus-alerts.yaml
@@ -236,7 +236,7 @@ groups:
     expr: |
       sum (
         label_replace(
-          lokistack_status_condition{reason="ReadyComponents", status="false"},
+          lokistack_status_condition{condition="Ready", status="false"},
           "namespace", "$1", "stack_namespace", "(.+)"
         )
       ) by (stack_name, namespace)
