--- a/.github/workflows/logql-correctness.yml
+++ b/.github/workflows/logql-correctness.yml
@@ -4,11 +4,12 @@ on:
     - cron: "30 2 * * 1-5" # Mon-Fri at 2.30am UTC
   pull_request:
     paths:
-      - "pkg/engine/**"
-      - "pkg/dataobj/**"
-      - "pkg/memory/**"
       - "pkg/columnar/**"
       - "pkg/compute/**"
+      - "pkg/dataobj/**"
+      - "pkg/engine/**"
+      - "pkg/logql/bench/**"
+      - "pkg/memory/**"
   workflow_dispatch:
     inputs:
       ref:
@@ -27,6 +28,8 @@ jobs:
     name: Generate test data
     runs-on: ubuntu-latest
     timeout-minutes: 60
+    outputs:
+      commit: ${{ steps.checkout.outputs.commit }}
     steps:
       - name: Checkout code
         id: checkout
@@ -69,12 +72,12 @@ jobs:
         id: checkout
         uses: actions/checkout@v4
         with:
-          ref: ${{ inputs.ref }}
+          ref: ${{ needs.generate-testdata.outputs.commit }}
 
       - name: Download test data
         uses: actions/download-artifact@v4.1.3
         with:
-          name: logql-bench-testdata-${{ steps.checkout.outputs.commit }}
+          name: logql-bench-testdata-${{ needs.generate-testdata.outputs.commit }}
           path: ./pkg/logql/bench
 
       - name: Unzip test data
@@ -94,7 +97,7 @@ jobs:
         run: |
           go test \
             -o results/bench.test \
-            -v -slow-tests -remote-transport=${{ matrix.remote_transport }} -timeout=60m \
+            -v -slow-tests -bench-suite=regression -remote-transport=${{ matrix.remote_transport }} -timeout=60m \
             -cpuprofile=results/cpu.pprof -memprofile=results/mem.pprof \
             -run=TestStorageEquality/query=.+/kind=.+/store=${{ matrix.store }}$ \
             ${{ matrix.range_type == 'instant' && '-range-type=instant' || '' }} \
@@ -106,6 +109,6 @@ jobs:
         uses: actions/upload-artifact@v4
         if: always() # Upload results even if one of the test tests fails
         with:
-          name: logql-bench-results-${{ matrix.store }}-${{ matrix.range_type }}-${{ matrix.remote_transport == true && 'remote' || 'local' }}-${{ steps.checkout.outputs.commit }}
+          name: logql-bench-results-${{ matrix.store }}-${{ matrix.range_type }}-${{ matrix.remote_transport == true && 'remote' || 'local' }}-${{ needs.generate-testdata.outputs.commit }}
           path: ./pkg/logql/bench/results
           retention-days: 7
