--- a/pkg/logql/bench/queries/exhaustive/aggregations.yaml
+++ b/pkg/logql/bench/queries/exhaustive/aggregations.yaml
@@ -135,6 +135,7 @@ queries:
   - description: Count aggregated by env and component
     query: sum by (env, component) (count_over_time(${SELECTOR}[${RANGE}]))
     kind: metric
+    skip: true # component label not available in test data
     time_range:
       length: 24h
       step: 1m
