--- a/pkg/logql/bench/queries/exhaustive/unwrap-aggregations.yaml
+++ b/pkg/logql/bench/queries/exhaustive/unwrap-aggregations.yaml
@@ -634,6 +634,7 @@ queries:
   - description: Unwrap with label filter after parsing
     query: sum by (query_type) (sum_over_time(${SELECTOR} | json | query_type != "" | unwrap rows_affected [${RANGE}]))
     kind: metric
+    skip: true # query_type field not available in test data
     time_range:
       length: 24h
       step: 1m
