--- a/pkg/logql/bench/queries/fast/structured-metadata.yaml
+++ b/pkg/logql/bench/queries/fast/structured-metadata.yaml
@@ -58,7 +58,7 @@ queries:
   - description: JSON parsing with structured metadata filter first
     query: ${SELECTOR} | detected_level="error" | json
     kind: log
-    skip: true # timing out
+    skip: true # timing out - requires dataobj engine schema fix for structured metadata columns
     time_range:
       length: 24h
     directions: both
