chore(deps): Scope renovate prometheus updates (#20954)

--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -191,7 +191,13 @@
     },
     {
       // Track prometheus via pseudo-versions only (closest to main); do not switch to a tagged release and stick to that major.
+      // Scoped to main branch only and excludes operator files to avoid overriding their disabled update rules.
       matchPackageNames: ['github.com/prometheus/prometheus'],
+      matchBaseBranches: ['main'],
+      matchFileNames: [
+        '!operator/go.mod',
+        '!operator/api/loki/go.mod',
+      ],
       allowedVersions: '/^v[0-9]+\\.[0-9]+\\.[0-9]+-0\\.\\d{14}-[a-f0-9]+$/',
       enabled: true,
       digest: {
