chore(thor): Parallel query engine correctness tests (#20811)

--- a/pkg/logql/bench/queries/fast/structured-metadata.yaml
+++ b/pkg/logql/bench/queries/fast/structured-metadata.yaml
@@ -8,7 +8,8 @@ queries:
       length: 24h
     directions: both
     requires:
-      structured_metadata: ["detected_level"]
+      structured_metadata:
+        - detected_level
     tags:
       - structured-metadata
       - filter
@@ -21,7 +22,8 @@ queries:
     directions: both
     requires:
       log_format: logfmt
-      structured_metadata: ["detected_level"]
+      structured_metadata:
+        - detected_level
     tags:
       - structured-metadata
       - logfmt
@@ -35,7 +37,8 @@ queries:
     directions: both
     requires:
       log_format: logfmt
-      structured_metadata: ["detected_level"]
+      structured_metadata:
+        - detected_level
     tags:
       - structured-metadata
       - logfmt
@@ -49,7 +52,8 @@ queries:
     directions: both
     requires:
       log_format: json
-      structured_metadata: ["detected_level"]
+      structured_metadata:
+        - detected_level
     tags:
       - structured-metadata
       - json
@@ -64,7 +68,8 @@ queries:
     directions: both
     requires:
       log_format: json
-      structured_metadata: ["detected_level"]
+      structured_metadata:
+        - detected_level
     tags:
       - structured-metadata
       - json
