--- a/pkg/logql/bench/queries/fast/basic-selectors.yaml
+++ b/pkg/logql/bench/queries/fast/basic-selectors.yaml
@@ -3,59 +3,65 @@
 # Basic label selector queries
 # These are the fastest queries and run on every test
 queries:
-  - description: "Basic label selector"
-    query: "${SELECTOR}"
+  - description: Basic label selector
+    query: ${SELECTOR}
     kind: log
     time_range:
-      length: "24h"
+      length: 24h
     directions: both
     tags:
-      - "baseline"
-      - "selector"
+      - baseline
+      - selector
 
-  - description: "Label selector with line filter"
-    query: '${SELECTOR} |= "level"'
+  - description: Label selector with line filter
+    query: ${SELECTOR} |= "level"
     time_range:
-      length: "24h"
+      length: 24h
     directions: both
     requires:
-      keywords: ["level"]
+      keywords:
+        - level
     tags:
-      - "line-filter"
-      - "text-search"
+      - line-filter
+      - text-search
 
-  - description: "Label selector with regex line filter (case-insensitive)"
-    query: '${SELECTOR} |~ "(?i)error"'
+  - description: Label selector with regex line filter (case-insensitive)
+    query: ${SELECTOR} |~ "(?i)error"
     time_range:
-      length: "24h"
+      length: 24h
     directions: both
     requires:
-      keywords: ["error"]
+      keywords:
+        - error
     tags:
-      - "line-filter"
-      - "regex"
-      - "case-insensitive"
+      - line-filter
+      - regex
+      - case-insensitive
 
-  - description: "Label selector with negative regex filter"
-    query: '${SELECTOR} !~ "(?i)debug"'
+  - description: Label selector with negative regex filter
+    query: ${SELECTOR} !~ "(?i)debug"
     time_range:
-      length: "24h"
+      length: 24h
     directions: both
     requires:
-      keywords: ["debug"]
+      keywords:
+       - debug
     tags:
-      - "line-filter"
-      - "regex"
-      - "negative-filter"
+      - line-filter
+      - regex
+      - negative-filter
 
-  - description: "Label filter expression outside stream selector"
-    query: '${SELECTOR} | ${LABEL_NAME} = "${LABEL_VALUE}"'
+  - description: Label filter expression outside stream selector
+    query: ${SELECTOR} | ${LABEL_NAME} = "${LABEL_VALUE}"
     time_range:
-      length: "24h"
+      length: 24h
     directions: both
     requires:
-      labels: ["env", "region", "cluster"]
+      labels:
+        - env
+        - region
+        - cluster
     tags:
-      - "line-filter"
-      - "label-filter"
-    notes: "Tests indexed label filtering using | label=value syntax. Requires streams with multiple labels."
+      - line-filter
+      - label-filter
+    notes: Tests indexed label filtering using | label=value syntax. Requires streams with multiple labels.
