--- a/operator/config/overlays/community/prometheus_service_monitor_patch.yaml
+++ b/operator/config/overlays/community/prometheus_service_monitor_patch.yaml
@@ -8,7 +8,7 @@ metadata:
 spec:
   endpoints:
     - path: /metrics
-      targetPort: 8443
+      targetPort: metrics
       scheme: http
       interval: 30s
       scrapeTimeout: 10s
