--- a/operator/bundle/openshift/manifests/loki-operator-manager-config_v1_configmap.yaml
+++ b/operator/bundle/openshift/manifests/loki-operator-manager-config_v1_configmap.yaml
@@ -6,9 +6,8 @@ data:
     health:
       healthProbeBindAddress: :8081
     metrics:
-      # Bind only on this host to allow accessing metrics
-      # only via the kube-rbac-proxy sidecar.
-      bindAddress: 127.0.0.1:8080
+      bindAddress: :8443
+      secure: true
     webhook:
       port: 9443
     leaderElection:
