--- a/operator/bundle/openshift/manifests/loki-operator-metrics-monitor_monitoring.coreos.com_v1_servicemonitor.yaml
+++ b/operator/bundle/openshift/manifests/loki-operator-metrics-monitor_monitoring.coreos.com_v1_servicemonitor.yaml
@@ -20,7 +20,7 @@ spec:
     path: /metrics
     scheme: https
     scrapeTimeout: 10s
-    targetPort: 8443
+    targetPort: metrics
     tlsConfig:
       ca:
         secret:
