--- a/operator/config/overlays/development/manager_metrics_port_patch.yaml
+++ b/operator/config/overlays/development/manager_metrics_port_patch.yaml
@@ -6,8 +6,7 @@ spec:
   template:
     spec:
       containers:
-        - name: manager
-          resources:
-            requests:
-              cpu: 200m
-              memory: 256Mi
+      - name: manager
+        ports:
+        - containerPort: 8080
+          name: metrics
