--- a/operator/config/overlays/openshift/prometheus_service_monitor_patch.yaml
+++ b/operator/config/overlays/openshift/prometheus_service_monitor_patch.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   endpoints:
     - path: /metrics
-      targetPort: 8443
+      targetPort: metrics
       scheme: https
       interval: 30s
       scrapeTimeout: 10s
